prevent jumping when adding todos

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ main {
   align-items: center;
   justify-content: center;
   width: 100vw;
-  height: 100vh;
+  margin-top: 20vh;
 }
 
 input,
